<resources>
    <string name="app_name">GlamorousBorrowingWhaleApp</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_search_potentials">SearchPotentialsActivity</string>
    <string name="title_activity_things_owned">ThingsOwnedActivity</string>
    <string name="title_activity_view_incoming_bids">ViewIncomingBidsActivity</string>
    <string name="title_activity_view_things_borrowed">ViewThingsBorrowedActivity</string>
    <string name="title_activity_view_pending_bids">ViewPendingBidsActivity</string>
    <string name="title_activity_view_my_item">ViewMyItemActivity</string>
    <string name="title_activity_view_borrowing_out">ViewBorrowingOutActivity</string>
    <string name="my_stuff">My Stuff</string>
    <string name="my_bids">My Bids</string>
    <string name="borrow">Search</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_my_items_incoming_bids">MyItemsIncomingBidsActivity</string>
    <string name="incoming_bids">Incoming Bids</string>
    <string name="borrowed_items">Items I Am Borrowing</string>
    <string name="my_items_borrowed">My Items Being Borrowed</string>
    <string name="spinner_prompt">Status</string>
    <string name="home_button">home button</string>
    <string name="search_button">search button</string>
    <string name="help_button">help button</string>
    <string name="logout_menu">logout button on action bar</string>
    <string name="google_maps_key">AIzaSyBZGKOwmHnnbp2-ikuv4XAg2eoP27SSYeo</string>
    <string name="title_activity_get_location">Map</string>
    <string name="cancel">Cancel!</string>
    <string name="location_correct">Yes, that\'s correct!</string>
    <string name="google_app_id">borrow-whale</string>
</resources>
